Fixed login and registration routes in Welcome

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -797,6 +797,8 @@ video {
 	z-index: 50;
 }.z-40{
 	z-index: 40;
+}.z-20{
+	z-index: 20;
 }.col-span-6{
 	grid-column: span 6 / span 6;
 }.mx-auto{
