--- a/public/css/app.css
+++ b/public/css/app.css
@@ -880,6 +880,8 @@ video {
 	height: 2.5rem;
 }.h-20{
 	height: 5rem;
+}.h-3\/4{
+	height: 75%;
 }.min-h-screen{
 	min-height: 100vh;
 }.w-5{
@@ -910,6 +912,8 @@ video {
 	width: 2.5rem;
 }.w-20{
 	width: 5rem;
+}.w-1\/2{
+	width: 50%;
 }.min-w-0{
 	min-width: 0px;
 }.max-w-screen-xl{
@@ -1206,6 +1210,8 @@ video {
 	font-weight: 600;
 }.uppercase{
 	text-transform: uppercase;
+}.capitalize{
+	text-transform: capitalize;
 }.leading-5{
 	line-height: 1.25rem;
 }.leading-7{
@@ -1401,6 +1407,8 @@ video {
 }.focus\:border-gray-500:focus{
 	--tw-border-opacity: 1;
 	border-color: rgba(107, 114, 128, var(--tw-border-opacity));
+}.focus\:border-transparent:focus{
+	border-color: transparent;
 }.focus\:bg-indigo-600:focus{
 	--tw-bg-opacity: 1;
 	background-color: rgba(79, 70, 229, var(--tw-bg-opacity));
@@ -1536,6 +1544,8 @@ video {
 		align-items: center;
 	}.sm\:justify-start{
 		justify-content: flex-start;
+	}.sm\:justify-end{
+		justify-content: flex-end;
 	}.sm\:justify-center{
 		justify-content: center;
 	}.sm\:justify-between{
