--- a/public/css/app.css
+++ b/public/css/app.css
@@ -966,6 +966,8 @@ video {
 	flex-direction: column;
 }.flex-wrap{
 	flex-wrap: wrap;
+}.items-end{
+	align-items: flex-end;
 }.items-center{
 	align-items: center;
 }.justify-end{
@@ -1059,9 +1061,6 @@ video {
 }.border-gray-400{
 	--tw-border-opacity: 1;
 	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
-}.border-gray-500{
-	--tw-border-opacity: 1;
-	border-color: rgba(107, 114, 128, var(--tw-border-opacity));
 }.bg-white{
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
@@ -1173,6 +1172,8 @@ video {
 	padding-top: 2rem;
 }.pt-16{
 	padding-top: 4rem;
+}.pl-6{
+	padding-left: 1.5rem;
 }.text-left{
 	text-align: left;
 }.text-center{
@@ -1389,6 +1390,9 @@ video {
 }.hover\:text-gray-900:hover{
 	--tw-text-opacity: 1;
 	color: rgba(17, 24, 39, var(--tw-text-opacity));
+}.hover\:text-white:hover{
+	--tw-text-opacity: 1;
+	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }.focus\:z-10:focus{
 	z-index: 10;
 }.focus\:border-blue-300:focus{
@@ -1409,11 +1413,11 @@ video {
 }.focus\:border-gray-300:focus{
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
+}.focus\:border-transparent:focus{
+	border-color: transparent;
 }.focus\:border-gray-500:focus{
 	--tw-border-opacity: 1;
 	border-color: rgba(107, 114, 128, var(--tw-border-opacity));
-}.focus\:border-transparent:focus{
-	border-color: transparent;
 }.focus\:bg-indigo-600:focus{
 	--tw-bg-opacity: 1;
 	background-color: rgba(79, 70, 229, var(--tw-bg-opacity));
@@ -1520,6 +1524,8 @@ video {
 		width: 2.5rem;
 	}.sm\:w-full{
 		width: 100%;
+	}.sm\:w-1\/3{
+		width: 33.333333%;
 	}.sm\:max-w-md{
 		max-width: 28rem;
 	}.sm\:max-w-sm{
@@ -1608,6 +1614,8 @@ video {
 	}
 }@media (min-width: 1024px){.lg\:col-span-4{
 		grid-column: span 4 / span 4;
+	}.lg\:w-1\/4{
+		width: 25%;
 	}.lg\:px-8{
 		padding-left: 2rem;
 		padding-right: 2rem;
