--- a/public/css/app.css
+++ b/public/css/app.css
@@ -804,6 +804,9 @@ video {
 }.mx-auto{
 	margin-left: auto;
 	margin-right: auto;
+}.my-5{
+	margin-top: 1.25rem;
+	margin-bottom: 1.25rem;
 }.ml-3{
 	margin-left: 0.75rem;
 }.-ml-px{
@@ -1148,6 +1151,9 @@ video {
 }.py-10{
 	padding-top: 2.5rem;
 	padding-bottom: 2.5rem;
+}.px-0{
+	padding-left: 0px;
+	padding-right: 0px;
 }.pt-6{
 	padding-top: 1.5rem;
 }.pt-5{
@@ -1500,6 +1506,15 @@ video {
 	}.sm\:-my-px{
 		margin-top: -1px;
 		margin-bottom: -1px;
+	}.sm\:mx-2{
+		margin-left: 0.5rem;
+		margin-right: 0.5rem;
+	}.sm\:my-2{
+		margin-top: 0.5rem;
+		margin-bottom: 0.5rem;
+	}.sm\:my-3{
+		margin-top: 0.75rem;
+		margin-bottom: 0.75rem;
 	}.sm\:ml-3{
 		margin-left: 0.75rem;
 	}.sm\:-mr-2{
@@ -1526,6 +1541,8 @@ video {
 		width: 100%;
 	}.sm\:w-1\/3{
 		width: 33.333333%;
+	}.sm\:w-2\/3{
+		width: 66.666667%;
 	}.sm\:max-w-md{
 		max-width: 28rem;
 	}.sm\:max-w-sm{
@@ -1597,6 +1614,9 @@ video {
 		grid-column: span 2 / span 2;
 	}.md\:col-span-1{
 		grid-column: span 1 / span 1;
+	}.md\:mx-4{
+		margin-left: 1rem;
+		margin-right: 1rem;
 	}.md\:mt-0{
 		margin-top: 0px;
 	}.md\:grid{
@@ -1611,13 +1631,22 @@ video {
 		border-top-width: 0px;
 	}.md\:border-l{
 		border-left-width: 1px;
+	}.md\:px-10{
+		padding-left: 2.5rem;
+		padding-right: 2.5rem;
 	}
 }@media (min-width: 1024px){.lg\:col-span-4{
 		grid-column: span 4 / span 4;
+	}.lg\:mx-auto{
+		margin-left: auto;
+		margin-right: auto;
 	}.lg\:w-1\/4{
 		width: 25%;
 	}.lg\:px-8{
 		padding-left: 2rem;
 		padding-right: 2rem;
+	}.lg\:px-10{
+		padding-left: 2.5rem;
+		padding-right: 2.5rem;
 	}
 }
