--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1107,11 +1107,10 @@ video {
 }.bg-gray-200{
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
-}.bg-gray-300{
-	--tw-bg-opacity: 1;
-	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
 }.bg-opacity-25{
 	--tw-bg-opacity: 0.25;
+}.fill-current{
+	fill: currentColor;
 }.object-cover{
 	-o-object-fit: cover;
 	   object-fit: cover;
@@ -1385,15 +1384,9 @@ video {
 }.hover\:bg-gray-50:hover{
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
-}.hover\:bg-blue-800:hover{
+}.hover\:bg-gray-500:hover{
 	--tw-bg-opacity: 1;
-	background-color: rgba(30, 64, 175, var(--tw-bg-opacity));
-}.hover\:bg-gray-400:hover{
-	--tw-bg-opacity: 1;
-	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
-}.hover\:bg-blue-400:hover{
-	--tw-bg-opacity: 1;
-	background-color: rgba(96, 165, 250, var(--tw-bg-opacity));
+	background-color: rgba(107, 114, 128, var(--tw-bg-opacity));
 }.hover\:bg-blue-600:hover{
 	--tw-bg-opacity: 1;
 	background-color: rgba(37, 99, 235, var(--tw-bg-opacity));
@@ -1415,12 +1408,6 @@ video {
 }.hover\:text-white:hover{
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
-}.hover\:text-blue-500:hover{
-	--tw-text-opacity: 1;
-	color: rgba(59, 130, 246, var(--tw-text-opacity));
-}.hover\:text-blue-800:hover{
-	--tw-text-opacity: 1;
-	color: rgba(30, 64, 175, var(--tw-text-opacity));
 }.hover\:text-blue-600:hover{
 	--tw-text-opacity: 1;
 	color: rgba(37, 99, 235, var(--tw-text-opacity));
@@ -1563,10 +1550,10 @@ video {
 		width: 100%;
 	}.sm\:w-1\/3{
 		width: 33.333333%;
-	}.sm\:w-2\/3{
-		width: 66.666667%;
 	}.sm\:w-1\/2{
 		width: 50%;
+	}.sm\:w-2\/3{
+		width: 66.666667%;
 	}.sm\:max-w-md{
 		max-width: 28rem;
 	}.sm\:max-w-sm{
@@ -1676,5 +1663,7 @@ video {
 	}.lg\:px-10{
 		padding-left: 2.5rem;
 		padding-right: 2.5rem;
+	}.lg\:pl-4{
+		padding-left: 1rem;
 	}
 }
