--- a/public/css/app.css
+++ b/public/css/app.css
@@ -860,6 +860,8 @@ video {
 	margin-top: -1px;
 }.ml-5{
 	margin-left: 1.25rem;
+}.mb-5{
+	margin-bottom: 1.25rem;
 }.block{
 	display: block;
 }.flex{
@@ -926,6 +928,8 @@ video {
 	width: 50%;
 }.w-3{
 	width: 0.75rem;
+}.w-1\/5{
+	width: 20%;
 }.min-w-0{
 	min-width: 0px;
 }.max-w-screen-xl{
@@ -1062,6 +1066,8 @@ video {
 	border-bottom-width: 1px;
 }.border-r{
 	border-right-width: 1px;
+}.border-l{
+	border-left-width: 1px;
 }.border-gray-300{
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
@@ -1206,6 +1212,8 @@ video {
 	padding-left: 1.5rem;
 }.pt-16{
 	padding-top: 4rem;
+}.pb-5{
+	padding-bottom: 1.25rem;
 }.text-left{
 	text-align: left;
 }.text-center{
@@ -1312,6 +1320,9 @@ video {
 }.text-gray-300{
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
+}.text-black{
+	--tw-text-opacity: 1;
+	color: rgba(0, 0, 0, var(--tw-text-opacity));
 }.underline{
 	text-decoration: underline;
 }.antialiased{
@@ -1418,6 +1429,12 @@ video {
 }.hover\:bg-green-500:hover{
 	--tw-bg-opacity: 1;
 	background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
+}.hover\:bg-gray-600:hover{
+	--tw-bg-opacity: 1;
+	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
+}.hover\:bg-gray-200:hover{
+	--tw-bg-opacity: 1;
+	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }.hover\:text-gray-500:hover{
 	--tw-text-opacity: 1;
 	color: rgba(107, 114, 128, var(--tw-text-opacity));
@@ -1442,6 +1459,9 @@ video {
 }.hover\:text-blue-600:hover{
 	--tw-text-opacity: 1;
 	color: rgba(37, 99, 235, var(--tw-text-opacity));
+}.hover\:text-red-500:hover{
+	--tw-text-opacity: 1;
+	color: rgba(239, 68, 68, var(--tw-text-opacity));
 }.focus\:z-10:focus{
 	z-index: 10;
 }.focus\:border-blue-300:focus{
