--- a/public/css/app.css
+++ b/public/css/app.css
@@ -858,10 +858,10 @@ video {
 	margin-bottom: 1rem;
 }.-mt-px{
 	margin-top: -1px;
-}.ml-5{
-	margin-left: 1.25rem;
 }.mb-5{
 	margin-bottom: 1.25rem;
+}.ml-5{
+	margin-left: 1.25rem;
 }.block{
 	display: block;
 }.flex{
@@ -924,12 +924,12 @@ video {
 	width: 2.5rem;
 }.w-20{
 	width: 5rem;
+}.w-1\/5{
+	width: 20%;
 }.w-1\/2{
 	width: 50%;
 }.w-3{
 	width: 0.75rem;
-}.w-1\/5{
-	width: 20%;
 }.min-w-0{
 	min-width: 0px;
 }.max-w-screen-xl{
@@ -1210,10 +1210,10 @@ video {
 	padding-top: 2rem;
 }.pl-6{
 	padding-left: 1.5rem;
-}.pt-16{
-	padding-top: 4rem;
 }.pb-5{
 	padding-bottom: 1.25rem;
+}.pt-16{
+	padding-top: 4rem;
 }.text-left{
 	text-align: left;
 }.text-center{
@@ -1420,6 +1420,9 @@ video {
 }.hover\:bg-gray-500:hover{
 	--tw-bg-opacity: 1;
 	background-color: rgba(107, 114, 128, var(--tw-bg-opacity));
+}.hover\:bg-gray-200:hover{
+	--tw-bg-opacity: 1;
+	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }.hover\:bg-blue-600:hover{
 	--tw-bg-opacity: 1;
 	background-color: rgba(37, 99, 235, var(--tw-bg-opacity));
@@ -1432,9 +1435,6 @@ video {
 }.hover\:bg-gray-600:hover{
 	--tw-bg-opacity: 1;
 	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
-}.hover\:bg-gray-200:hover{
-	--tw-bg-opacity: 1;
-	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }.hover\:text-gray-500:hover{
 	--tw-text-opacity: 1;
 	color: rgba(107, 114, 128, var(--tw-text-opacity));
@@ -1453,15 +1453,21 @@ video {
 }.hover\:text-white:hover{
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
-}.hover\:text-gray-300:hover{
-	--tw-text-opacity: 1;
-	color: rgba(209, 213, 219, var(--tw-text-opacity));
-}.hover\:text-blue-600:hover{
-	--tw-text-opacity: 1;
-	color: rgba(37, 99, 235, var(--tw-text-opacity));
 }.hover\:text-red-500:hover{
 	--tw-text-opacity: 1;
 	color: rgba(239, 68, 68, var(--tw-text-opacity));
+}.hover\:text-blue-600:hover{
+	--tw-text-opacity: 1;
+	color: rgba(37, 99, 235, var(--tw-text-opacity));
+}.hover\:text-green-600:hover{
+	--tw-text-opacity: 1;
+	color: rgba(5, 150, 105, var(--tw-text-opacity));
+}.hover\:text-red-600:hover{
+	--tw-text-opacity: 1;
+	color: rgba(220, 38, 38, var(--tw-text-opacity));
+}.hover\:text-red-400:hover{
+	--tw-text-opacity: 1;
+	color: rgba(248, 113, 113, var(--tw-text-opacity));
 }.focus\:z-10:focus{
 	z-index: 10;
 }.focus\:border-blue-300:focus{
