--- a/public/css/app.css
+++ b/public/css/app.css
@@ -801,6 +801,8 @@ video {
 	z-index: 20;
 }.col-span-6{
 	grid-column: span 6 / span 6;
+}.m-auto{
+	margin: auto;
 }.mx-auto{
 	margin-left: auto;
 	margin-right: auto;
@@ -862,6 +864,10 @@ video {
 	margin-bottom: 1.25rem;
 }.ml-5{
 	margin-left: 1.25rem;
+}.mr-4{
+	margin-right: 1rem;
+}.mr-5{
+	margin-right: 1.25rem;
 }.block{
 	display: block;
 }.flex{
@@ -940,6 +946,8 @@ video {
 	max-width: 36rem;
 }.max-w-6xl{
 	max-width: 72rem;
+}.max-w-md{
+	max-width: 28rem;
 }.flex-1{
 	flex: 1 1 0%;
 }.flex-shrink-0{
@@ -1144,6 +1152,10 @@ video {
 	padding: 0.5rem;
 }.p-6{
 	padding: 1.5rem;
+}.p-4{
+	padding: 1rem;
+}.p-5{
+	padding: 1.25rem;
 }.px-4{
 	padding-left: 1rem;
 	padding-right: 1rem;
@@ -1214,6 +1226,10 @@ video {
 	padding-bottom: 1.25rem;
 }.pt-16{
 	padding-top: 4rem;
+}.pl-4{
+	padding-left: 1rem;
+}.pr-5{
+	padding-right: 1.25rem;
 }.text-left{
 	text-align: left;
 }.text-center{
@@ -1599,6 +1615,10 @@ video {
 		margin-left: 2.5rem;
 	}.sm\:ml-6{
 		margin-left: 1.5rem;
+	}.sm\:ml-2{
+		margin-left: 0.5rem;
+	}.sm\:mr-2{
+		margin-right: 0.5rem;
 	}.sm\:block{
 		display: block;
 	}.sm\:flex{
@@ -1629,6 +1649,10 @@ video {
 		max-width: 42rem;
 	}.sm\:flex-1{
 		flex: 1 1 0%;
+	}.sm\:flex-initial{
+		flex: 0 1 auto;
+	}.sm\:flex-auto{
+		flex: 1 1 auto;
 	}.sm\:translate-y-0{
 		--tw-translate-y: 0px;
 		transform: var(--tw-transform);
@@ -1697,8 +1721,12 @@ video {
 		margin-right: 1rem;
 	}.md\:mt-0{
 		margin-top: 0px;
+	}.md\:flex{
+		display: flex;
 	}.md\:grid{
 		display: grid;
+	}.md\:max-w-2xl{
+		max-width: 42rem;
 	}.md\:grid-cols-3{
 		grid-template-columns: repeat(3, minmax(0, 1fr));
 	}.md\:grid-cols-2{
