--- a/public/css/app.css
+++ b/public/css/app.css
@@ -801,8 +801,6 @@ video {
 	z-index: 20;
 }.col-span-6{
 	grid-column: span 6 / span 6;
-}.m-auto{
-	margin: auto;
 }.mx-auto{
 	margin-left: auto;
 	margin-right: auto;
@@ -862,12 +860,6 @@ video {
 	margin-top: -1px;
 }.mb-5{
 	margin-bottom: 1.25rem;
-}.ml-5{
-	margin-left: 1.25rem;
-}.mr-4{
-	margin-right: 1rem;
-}.mr-5{
-	margin-right: 1.25rem;
 }.block{
 	display: block;
 }.flex{
@@ -946,8 +938,6 @@ video {
 	max-width: 36rem;
 }.max-w-6xl{
 	max-width: 72rem;
-}.max-w-md{
-	max-width: 28rem;
 }.flex-1{
 	flex: 1 1 0%;
 }.flex-shrink-0{
@@ -1152,10 +1142,6 @@ video {
 	padding: 0.5rem;
 }.p-6{
 	padding: 1.5rem;
-}.p-4{
-	padding: 1rem;
-}.p-5{
-	padding: 1.25rem;
 }.px-4{
 	padding-left: 1rem;
 	padding-right: 1rem;
@@ -1226,10 +1212,6 @@ video {
 	padding-bottom: 1.25rem;
 }.pt-16{
 	padding-top: 4rem;
-}.pl-4{
-	padding-left: 1rem;
-}.pr-5{
-	padding-right: 1.25rem;
 }.text-left{
 	text-align: left;
 }.text-center{
@@ -1339,6 +1321,9 @@ video {
 }.text-black{
 	--tw-text-opacity: 1;
 	color: rgba(0, 0, 0, var(--tw-text-opacity));
+}.text-blue-600{
+	--tw-text-opacity: 1;
+	color: rgba(37, 99, 235, var(--tw-text-opacity));
 }.underline{
 	text-decoration: underline;
 }.antialiased{
@@ -1478,6 +1463,9 @@ video {
 }.hover\:text-blue-600:hover{
 	--tw-text-opacity: 1;
 	color: rgba(37, 99, 235, var(--tw-text-opacity));
+}.hover\:text-green-500:hover{
+	--tw-text-opacity: 1;
+	color: rgba(16, 185, 129, var(--tw-text-opacity));
 }.focus\:z-10:focus{
 	z-index: 10;
 }.focus\:border-blue-300:focus{
@@ -1615,10 +1603,6 @@ video {
 		margin-left: 2.5rem;
 	}.sm\:ml-6{
 		margin-left: 1.5rem;
-	}.sm\:ml-2{
-		margin-left: 0.5rem;
-	}.sm\:mr-2{
-		margin-right: 0.5rem;
 	}.sm\:block{
 		display: block;
 	}.sm\:flex{
@@ -1649,10 +1633,6 @@ video {
 		max-width: 42rem;
 	}.sm\:flex-1{
 		flex: 1 1 0%;
-	}.sm\:flex-initial{
-		flex: 0 1 auto;
-	}.sm\:flex-auto{
-		flex: 1 1 auto;
 	}.sm\:translate-y-0{
 		--tw-translate-y: 0px;
 		transform: var(--tw-transform);
@@ -1721,12 +1701,8 @@ video {
 		margin-right: 1rem;
 	}.md\:mt-0{
 		margin-top: 0px;
-	}.md\:flex{
-		display: flex;
 	}.md\:grid{
 		display: grid;
-	}.md\:max-w-2xl{
-		max-width: 42rem;
 	}.md\:grid-cols-3{
 		grid-template-columns: repeat(3, minmax(0, 1fr));
 	}.md\:grid-cols-2{
